--- a/ex2pag1.html
+++ b/ex2pag1.html
@@ -12,7 +12,7 @@ background-color: gray;
 </head>
 <body>
 <!--Comentário-->
-<img src="facens.webp">
+<img src="logo.jpg">
 <br>
 <h2>Curso de jogos digitais</h2>
 <br>
