--- a/ex2pag1.html
+++ b/ex2pag1.html
@@ -5,7 +5,7 @@
 <title>Jogos para Web</title>
 <style>
 body{
-background-color: gray;
+background-color: white;
 }
 </style>
 <link rel="stylesheet" type="text/css" href="style.css">
